@startuml ScriptureMemorization

class Program {
    +Main()
}

class Scripture {
    - List<Word> Words
    + HideRandomWords(int count)
    + AllWordsHidden()
}

class ScriptureReference {
    - string Book
    - int Chapter
    - int StartVerse
    - int? EndVerse
    + ToString()
}

class Word {
    - string Text
    - bool IsHidden
    + Hide()
}

Program --> Scripture : Uses
Scripture --> Word : Contains
Scripture --> ScriptureReference : Has

@enduml